--- a/Semana 3/Dia 3/Actividad 2/style.css
+++ b/Semana 3/Dia 3/Actividad 2/style.css
@@ -43,6 +43,10 @@ ul, ol {
     border: solid lightskyblue 2px;
 }
 
+:focus{
+    border: solid lightskyblue 2px;
+}
+
 .nav li ul {
     display:none;
     position:absolute;
