--- a/Semana 3/Dia 4/Actividad 2/style.css
+++ b/Semana 3/Dia 4/Actividad 2/style.css
@@ -8,7 +8,6 @@
 :root{
     --primary: #1e3932;
     --lightPrimary: #008248;
-    --backgroundFoot: #f1f8f6;
     --backgroundMain: #d4e9e2;
     --backgroundHeader: #f3f1e7;
     --fontColor: #000000;
@@ -90,7 +89,7 @@ h5{
 }
 
 
-main{
+.section1{
     background-color: var(--backgroundMain);
     height: 100vh;
     width: 100vw;
@@ -101,7 +100,7 @@ main{
     background-size: cover;
 }
 
-.prueba{
+.info{
     margin-top: 120px;
 }
 
@@ -121,7 +120,7 @@ button{
     margin: 2.5rem 0 2rem 0;
 }
 
-footer{
+.section2{
     padding: 9rem;
     text-align: center;
 }
@@ -167,4 +166,103 @@ h4{
 
 a:link{
     color: var(--lightPrimary);
+}
+
+.section3{
+    text-align: center;
+}
+
+.products{
+    background-color: #f1f7f5;
+    height: 170px;
+}
+
+.products h1{
+    padding: 45px;
+}
+
+.prices a{
+    text-decoration: none;
+    color: var(--fontColor);
+    font-size: 1.7rem;
+    padding: 16px 26px;
+}
+
+.prices span{
+    font-size: 0.8rem;
+}
+
+.coffe{
+    background-color: var(--backgroundMain);
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.product{
+    height: 230px;
+    width: 400px;
+    background-image: url(img/400.png);
+    background-size: cover;
+}
+
+.description{
+    text-align: left;
+    width: 300px;
+}
+
+.extras{
+    padding: 100px;
+}
+
+.text{
+    padding: 20px 290px;
+}
+
+.cards{
+    padding: 0 50px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-logo{
+    height: 100px;
+    width: 100px;
+    background-image: url(img/1-fun-freebies.jpg);
+    background-size: cover;   
+}
+
+.card-logo2{
+    height: 100px;
+    width: 100px;
+    background-image: url(img/2-order-and-pay-ahead.jpg);
+    background-size: cover;   
+}
+
+.card-logo3{
+    height: 100px;
+    width: 100px;
+    background-image: url(img/3-get-to-free-faster.jpg);
+    background-size: cover;   
+}
+
+.card-info{
+    padding: 30px;
+}
+.card-info h4{
+    margin: 10px;
+}
+
+.card a{
+    color: var(--lightPrimary);
+    font-weight: bold;
 }
