"Tomas" Agrego parte baja

--- a/Semana 3/Dia 4/Actividad 2/style.css
+++ b/Semana 3/Dia 4/Actividad 2/style.css
@@ -27,13 +27,14 @@ nav {
     position: fixed;
 }
 
+
 .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 17px 60px;
     list-style: none;
-}
+} 
 
 .rewards{
     width: 100vw;
@@ -265,4 +266,50 @@ a:link{
 .card a{
     color: var(--lightPrimary);
     font-weight: bold;
+}
+
+.title-pay{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.title-pay p{
+    max-width: 700px;
+    text-align: center;
+}
+
+
+
+.pay{
+    display: flex;
+    gap: 20px;
+    padding: 100px 0 20px 100px;
+    border-bottom: 1px solid grey ;
+}
+
+.pay-form{
+    display: flex;
+    gap: 20px;
+}
+
+
+.pay-form-img{
+    width: 200px;
+    height: 200px;
+
+}
+
+.pay-form-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.pay-form-info{
+    max-width: 300px;
+}
+
+.pay-form-info h3{
+    margin: 0 0 10px 0;
 }
